made some changes

--- a/about.html
+++ b/about.html
@@ -8,127 +8,137 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="gradient-bg-3">
+<body class="full-green-bg text-white">
 
   <!-- Navbar -->
   <nav class="flex justify-between items-center p-6 max-w-6xl mx-auto">
-    <h1 class="text-xl font-semibold text-indigo-700">Edgard M.</h1>
-    <div class="space-x-6 text-gray-700">
-      <a href="index.html" class="nav-item hover:text-indigo-600 transition-colors duration-300">Home</a>
-      <a href="about.html" class="nav-item text-indigo-600 font-medium">About</a>
-      <a href="contact.html" class="nav-item hover:text-indigo-600 transition-colors duration-300">Contact</a>
+    <h1 class="text-xl font-semibold text-white">Edgard M.</h1>
+    <div class="space-x-6 text-white">
+      <a href="index.html" class="nav-item">Home</a>
+      <a href="about.html" class="nav-item font-medium">About</a>
+      <a href="contact.html" class="nav-item">Contact</a>
     </div>
   </nav>
 
-  <div class="max-w-4xl mx-auto p-6 fade-in">
+  <div class="max-w-5xl mx-auto p-6 fade-in">
 
-    <h2 class="text-3xl font-semibold mb-6 colorful-underline inline-block">About Me</h2>
-
-    <p class="text-gray-700 leading-relaxed">
-      I am an agronomist trained in agricultural economics with practical experience in land conservation, 
-      conservation agriculture, and community-based agricultural development. I focus on supporting farmers, 
-      improving productivity, and implementing sustainable farming practices.
-    </p>
-
-    <p class="mt-4 text-gray-700">
-      Currently, I am pursuing a Master's degree in Environmental Economics & Natural Resource Management at UNILAK.
-    </p>
+    <div class="flex flex-col md:flex-row items-center gap-10 mb-12">
+      <div class="md:w-2/5 flex justify-center">
+        <img src="profile.jpg" class="large-profile-img rounded-2xl pulse-shadow object-cover w-full max-w-xs" />
+      </div>
+      <div class="md:w-3/5">
+        <h2 class="text-4xl font-bold mb-6 text-white green-underline inline-block">About Me</h2>
+        <p class="text-green-100 leading-relaxed text-lg">
+          I am an agronomist trained in agricultural economics with practical experience in land conservation, 
+          conservation agriculture, and community-based agricultural development. I focus on supporting farmers, 
+          improving productivity, and implementing sustainable farming practices.
+        </p>
+        <p class="mt-4 text-green-100 text-lg">
+          Currently, I am pursuing a Master's degree in Environmental Economics & Natural Resource Management at UNILAK,
+          further deepening my expertise in sustainable agricultural practices and resource management.
+        </p>
+      </div>
+    </div>
 
     <!-- Experience -->
-    <h3 class="text-2xl font-semibold mt-10 colorful-underline inline-block">Experience</h3>
+    <h3 class="text-3xl font-bold mt-12 text-white green-underline inline-block">Professional Experience</h3>
 
-    <div class="space-y-4 mt-4">
-      <div class="bg-white p-5 rounded-xl shadow card-hover">
-        <h4 class="font-semibold text-lg text-indigo-700">Land Conservation Project — Busogo Sector</h4>
-        <p class="text-gray-600 text-sm">Agronomist</p>
-        <p class="mt-2 text-gray-700">Worked on soil protection and farmer support programs.</p>
+    <div class="space-y-6 mt-6">
+      <div class="card-bg p-6 rounded-xl shadow card-hover border-l-4 border-green-500">
+        <h4 class="font-bold text-xl text-green-800">Land Conservation Project — Busogo Sector</h4>
+        <p class="text-green-600 text-md font-medium">Agronomist</p>
+        <p class="mt-3 text-gray-700">Worked on soil protection, erosion control, and farmer support programs to promote sustainable land use practices.</p>
       </div>
 
-      <div class="bg-white p-5 rounded-xl shadow card-hover">
-        <h4 class="font-semibold text-lg text-indigo-700">Bridge2Rwanda Farms</h4>
-        <p class="text-gray-600 text-sm">Conservation Agriculture</p>
-        <p class="mt-2 text-gray-700">Soil management and crop demonstration activities.</p>
+      <div class="card-bg p-6 rounded-xl shadow card-hover border-l-4 border-green-500">
+        <h4 class="font-bold text-xl text-green-800">Bridge2Rwanda Farms</h4>
+        <p class="text-green-600 text-md font-medium">Conservation Agriculture Specialist</p>
+        <p class="mt-3 text-gray-700">Implemented soil management techniques and crop demonstration activities to showcase sustainable farming methods.</p>
       </div>
 
-      <div class="bg-white p-5 rounded-xl shadow card-hover">
-        <h4 class="font-semibold text-lg text-indigo-700">Dynapharm Rwanda</h4>
-        <p class="text-gray-600 text-sm">Agronomist</p>
-        <p class="mt-2 text-gray-700">Field support for D.I.Grow fertilizer.</p>
+      <div class="card-bg p-6 rounded-xl shadow card-hover border-l-4 border-green-500">
+        <h4 class="font-bold text-xl text-green-800">Dynapharm Rwanda</h4>
+        <p class="text-green-600 text-md font-medium">Agronomist</p>
+        <p class="mt-3 text-gray-700">Provided field support and technical guidance for D.I.Grow fertilizer, helping farmers optimize crop nutrition.</p>
       </div>
 
-      <div class="bg-white p-5 rounded-xl shadow card-hover">
-        <h4 class="font-semibold text-lg text-indigo-700">FRESCO Rwanda</h4>
-        <p class="text-gray-600 text-sm">Field Officer / Agronomist</p>
-        <p class="mt-2 text-gray-700">Involved in contract farming and farmer-market linkage.</p>
+      <div class="card-bg p-6 rounded-xl shadow card-hover border-l-4 border-green-500">
+        <h4 class="font-bold text-xl text-green-800">FRESCO Rwanda</h4>
+        <p class="text-green-600 text-md font-medium">Field Officer / Agronomist</p>
+        <p class="mt-3 text-gray-700">Facilitated contract farming initiatives and strengthened farmer-market linkages to improve agricultural value chains.</p>
       </div>
     </div>
 
     <!-- Education -->
-    <h3 class="text-2xl font-semibold mt-10 colorful-underline inline-block">Education</h3>
+    <h3 class="text-3xl font-bold mt-12 text-white green-underline inline-block">Education</h3>
   
-    <div class="space-y-4 mt-4">
-      <div class="bg-white p-5 rounded-xl shadow card-hover">
-        <h4 class="font-semibold text-indigo-700">UNILAK</h4>
-        <p class="text-gray-600 text-sm">MSc — Environmental Economics & Natural Resource Management (Ongoing)</p>
+    <div class="space-y-6 mt-6">
+      <div class="card-bg p-6 rounded-xl shadow card-hover border-l-4 border-green-500">
+        <h4 class="font-bold text-xl text-green-800">UNILAK</h4>
+        <p class="text-green-600 text-md font-medium">MSc — Environmental Economics & Natural Resource Management (Ongoing)</p>
+        <p class="mt-2 text-gray-700">Focusing on sustainable resource management and economic policies for environmental conservation.</p>
       </div>
 
-      <div class="bg-white p-5 rounded-xl shadow card-hover">
-        <h4 class="font-semibold text-indigo-700">UR-CAVM ISAE Busogo Campus</h4>
-        <p class="text-gray-600 text-sm">Bachelor's in Agricultural Economics (2019–2024)</p>
+      <div class="card-bg p-6 rounded-xl shadow card-hover border-l-4 border-green-500">
+        <h4 class="font-bold text-xl text-green-800">UR-CAVM ISAE Busogo Campus</h4>
+        <p class="text-green-600 text-md font-medium">Bachelor's in Agricultural Economics (2019–2024)</p>
+        <p class="mt-2 text-gray-700">Comprehensive study of agricultural systems, economics, and sustainable farming practices.</p>
       </div>
     </div>
 
     <!-- Research -->
-    <h3 class="text-2xl font-semibold mt-10 colorful-underline inline-block">Research</h3>
+    <h3 class="text-3xl font-bold mt-12 text-white green-underline inline-block">Research</h3>
 
-    <div class="bg-white p-5 rounded-xl shadow card-hover mt-4">
-      <h4 class="font-semibold text-indigo-700">Impact of Off-Farm Activities on Farmers' Livelihoods</h4>
-      <p class="text-gray-600 text-sm">Case Study: Busogo Sector</p>
+    <div class="card-bg p-6 rounded-xl shadow card-hover border-l-4 border-green-500 mt-6">
+      <h4 class="font-bold text-xl text-green-800">Impact of Off-Farm Activities on Farmers' Livelihoods</h4>
+      <p class="text-green-600 text-md font-medium">Case Study: Busogo Sector</p>
+      <p class="mt-3 text-gray-700">Research examining how diversification into non-farming activities affects agricultural households' economic resilience and sustainability.</p>
     </div>
 
     <!-- Skills -->
-    <h3 class="text-2xl font-semibold mt-10 colorful-underline inline-block">Skills</h3>
+    <h3 class="text-3xl font-bold mt-12 text-white green-underline inline-block">Skills</h3>
 
-    <div class="bg-white p-5 rounded-xl shadow card-hover mt-4">
-      <div class="flex flex-wrap gap-2">
-        <span class="px-3 py-1 bg-indigo-100 text-indigo-700 rounded-full text-sm">Agricultural Economics</span>
-        <span class="px-3 py-1 bg-green-100 text-green-700 rounded-full text-sm">Conservation Agriculture</span>
-        <span class="px-3 py-1 bg-blue-100 text-blue-700 rounded-full text-sm">Land Conservation</span>
-        <span class="px-3 py-1 bg-purple-100 text-purple-700 rounded-full text-sm">STATA Analysis</span>
-        <span class="px-3 py-1 bg-teal-100 text-teal-700 rounded-full text-sm">Contract Farming</span>
+    <div class="card-bg p-6 rounded-xl shadow card-hover mt-6">
+      <div class="flex flex-wrap gap-3">
+        <span class="px-4 py-2 bg-green-100 text-green-800 rounded-full text-md font-medium">Agricultural Economics</span>
+        <span class="px-4 py-2 bg-green-100 text-green-800 rounded-full text-md font-medium">Conservation Agriculture</span>
+        <span class="px-4 py-2 bg-green-100 text-green-800 rounded-full text-md font-medium">Land Conservation</span>
+        <span class="px-4 py-2 bg-green-100 text-green-800 rounded-full text-md font-medium">STATA Analysis</span>
+        <span class="px-4 py-2 bg-green-100 text-green-800 rounded-full text-md font-medium">Contract Farming</span>
+        <span class="px-4 py-2 bg-green-100 text-green-800 rounded-full text-md font-medium">Soil Management</span>
+        <span class="px-4 py-2 bg-green-100 text-green-800 rounded-full text-md font-medium">Sustainable Farming</span>
+        <span class="px-4 py-2 bg-green-100 text-green-800 rounded-full text-md font-medium">Farmer Training</span>
       </div>
     </div>
 
     <!-- Languages -->
-    <h3 class="text-2xl font-semibold mt-10 colorful-underline inline-block">Languages</h3>
+    <h3 class="text-3xl font-bold mt-12 text-white green-underline inline-block">Languages</h3>
 
-    <div class="bg-white p-5 rounded-xl shadow card-hover mt-4">
+    <div class="card-bg p-6 rounded-xl shadow card-hover mt-6">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <div class="flex items-center">
-          <div class="w-3 h-3 bg-green-500 rounded-full mr-2"></div>
-          <span class="text-gray-700">Kinyarwanda — Excellent</span>
+          <div class="w-4 h-4 bg-green-500 rounded-full mr-3"></div>
+          <span class="text-gray-700 text-lg">Kinyarwanda — Native</span>
         </div>
         <div class="flex items-center">
-          <div class="w-3 h-3 bg-blue-500 rounded-full mr-2"></div>
-          <span class="text-gray-700">English — Very Good</span>
+          <div class="w-4 h-4 bg-green-400 rounded-full mr-3"></div>
+          <span class="text-gray-700 text-lg">English — Fluent</span>
         </div>
         <div class="flex items-center">
-          <div class="w-3 h-3 bg-yellow-500 rounded-full mr-2"></div>
-          <span class="text-gray-700">French — Good</span>
+          <div class="w-4 h-4 bg-green-300 rounded-full mr-3"></div>
+          <span class="text-gray-700 text-lg">French — Intermediate</span>
         </div>
         <div class="flex items-center">
-          <div class="w-3 h-3 bg-orange-500 rounded-full mr-2"></div>
-          <span class="text-gray-700">Swahili — Good</span>
+          <div class="w-4 h-4 bg-green-200 rounded-full mr-3"></div>
+          <span class="text-gray-700 text-lg">Swahili — Intermediate</span>
         </div>
       </div>
     </div>
 
   </div>
 
-  <div class="section-divider mt-12"></div>
-
-  <footer class="text-center text-gray-600 text-sm mt-6 mb-6">
-    © 2025 Mugisha Edgard
+  <footer class="text-center text-green-200 text-sm mt-12 mb-6">
+    © 2025 Mugisha Edgard | Agronomist & Environmental Economics Researcher
   </footer>
 
 </body>
